[package]
name = "interpreter"
version = "0.1.0"
edition = "2024"
default-run="interpreter"

[features]
track-allocation = []
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indoc = "2"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
thiserror = "2"
zip = "6.0.0"


[lib]
name = "interpreter"
path = "src/library/library.rs"

[[bin]]
name = "interpreter"
path = "src/main.rs"

[[bin]]
name = "compiler"
path = "src/compiler.rs"
